--- a/conf/dmos.conf
+++ b/conf/dmos.conf
@@ -1,4 +1,8 @@
 {
+    "simulation": {
+        "users":100,
+        "duration":10
+    },
     "logging": {
         "loglevels": {
             "default":"DEBUG",
