initial work for fsm

--- a/conf/dmos.conf
+++ b/conf/dmos.conf
@@ -18,6 +18,14 @@
                 {
                     "type": "file",
                     "absolute": true,
+                    "filename": "../log/fsm.log",
+                    "maxLogSize": 200000,
+                    "backups": 5,
+                    "category": "fsm"
+                },
+                {
+                    "type": "file",
+                    "absolute": true,
                     "filename": "../log/wpi.log",
                     "maxLogSize": 200000,
                     "backups": 5,
