full simulaiton without wpi

--- a/conf/dmos.conf
+++ b/conf/dmos.conf
@@ -1,7 +1,10 @@
 {
     "simulation": {
         "users":100,
-        "duration":10
+        "duration":10,
+        "mac" : "04:00:00:00:00:00",
+        "be164" : 30210800000,
+        "e164" : 4021080000
     },
     "logging": {
         "loglevels": {
