--- a/conf/dmos.conf
+++ b/conf/dmos.conf
@@ -8,7 +8,7 @@
     },
     "logging": {
         "loglevels": {
-            "default":"DEBUG",
+            "default":"ALL",
             "console":"ALL",
             "wpi":"ALL"
         },
@@ -18,7 +18,7 @@
                     "type": "file",
                     "absolute": true,
                     "filename": "../log/dmos.log",
-                    "maxLogSize": 20480,
+                    "maxLogSize": 200000,
                     "backups": 3,
                     "category": "default-log"
                 },
